objects/vlocity_ins__VlocityTrackingEntry__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ContextId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerInteractionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Interaction</label>
        <referenceTo>vlocity_ins__CustomerInteraction__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>VlocityTrackingEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerInteractionToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResourceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Acuity Resource</label>
        <referenceTo>vlocity_ins__VqResource__c</referenceTo>
        <relationshipLabel>Vlocity Tracking Entries</relationshipLabel>
        <relationshipName>Vlocity_Tracking_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Timestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackingService__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TrackingService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityInteractionToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vlocity Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Tracking Entry</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>vlocity_ins__TrackingService__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vlocity Tracking Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Tracking Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>